--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,17 @@ dev-wallet.json
 # Added by cargo
 
 /target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
